# article-forge

./: .gitignore  LICENSE  README.md  forge.example.yaml  pyproject.toml  roadmap.md
docs/: skill-backlog.md
docs/decisions/: 001-why-pipeline-over-manual.md  002-station-architecture.md  003-intake-station-design.md  004-scan-reads-local-mdx.md
src/forge/: __init__.py  cli.py
src/forge/providers/: __init__.py  base.py  mock.py
src/forge/stations/: intake.py
tests/: test_intake.py
