[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "article-forge"
version = "0.1.0"
description = "AI-powered pipeline that turns a topic into a publish-ready MDX blog article"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]